# HIRS

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE.md  NOTICE  NOTICE.md  README.md  build.gradle  build.gradle.save  download_validation_reports.sh  gradle.properties  mkdocs.yml  settings.gradle  test.sh
.ci/docker/: .env  Dockerfile.aca  Dockerfile.aca-rocky  Dockerfile.aca-rocky-ci  Dockerfile.aca-windows  Dockerfile.acaimage  Dockerfile.amazonlinux2  Dockerfile.centos7  Dockerfile.hat-linux  Dockerfile.hat-windows  Dockerfile.rocky  Dockerfile.rocky88ci  Dockerfile.rocky9ci  Dockerfile.tpm2provisioner  Dockerfile.tpm2provisioner-dotnet-ci  Dockerfile.tpm2provisioner_dotnet  Dockerfile.tpmprovisioner  Dockerfile.ubuntu18  Dockerfile.ubuntu22ci  Dockerfile.ubuntu24ci  Dockerfile.ubuntu26ci  compose-acceptance-test-linux.yml  compose-acceptance-test-windows.yml  compose-acceptance-test.yml  docker-compose-hat-linux.yml  docker-compose-hat-win.yml  docker-compose-hipxe-win.yml  docker-compose-system-test.yml  docker-compose-tpm2-base-delta-bad.yml  docker-compose-tpm2-base-delta-good.yml  docker-compose-tpm2-base-delta.yml  docker-compose-tpm2.yml  docker-compose.yml
.ci/integration-tests/: build-trousers.sh  run-integration-tests.sh  setup-aca.sh  setup-tpm2provisioner.sh  setup-tpmprovisioner.sh  tpm-emulator-init.sh
.ci/setup/: addFaultyComponents.py  addFaultyComponentsForPBaseCertB.py  appsettings.json  createDeltaCertComponents.py  createDeltaComponentsForPBaseCertA.py  createDeltaComponentsForPBaseCertB.py  setup-tpm2provisioner-bad-base.sh  setup-tpm2provisioner-base-delta-bad.sh  setup-tpm2provisioner-base-delta-good.sh  setup-tpm2provisioner-base-delta.sh  setup-tpm2provisioner.sh  setup-tpmprovisioner.sh  setup_tpm2provisioner.sh  tpm2_common.sh
.ci/system-tests/: aca_policy_tests.sh  allcomponents_hirs_system_tests.sh  platform_cert_tests.sh  rim_system_tests.sh  run-system-tests-tpm2-base-delta-bad.sh  run-system-tests-tpm2-base-delta-good.sh  run-system-tests-tpm2-base-delta.sh  run-system-tests-tpm2.sh  run-system-tests.sh  run_aca_provisioner_dotnet_r9.sh  run_system_tests.sh  setup_system_tests.sh  sys_test_common.sh  system_test.py  system_test_Driver.py  system_test_core.py  systems-test-centos7-tpm1-2.sh  systems-test-centos7-tpm2-base-delta-bad.sh  systems-test-centos7-tpm2-base-delta-good.sh  systems-test-centos7-tpm2-base-delta.sh  systems-test-centos7-tpm2.sh  systems-test.core.sh
.github/workflows/: build_aca_image.yml  create_aca_images.yml  dotnet_provisioner_unit_tests.yml  dotnet_system_test.yml  hirs_package_linux.yml  hirs_unit_tests.yml  package_centos.yml  rim_tests.yml  system_test.yml
.run/: issue1139_handleUefiVariableCertProcessingException.run.xml
0_temp/: binary_bios_measurements_addEvt11asSPDMFirmwareBlob  binary_bios_measurements_addEvt11asSPDMFirmwareBlob_version1
ACA_SwidTag/: ACA_SwidTag.spec  package.sh
ACA_SwidTag/docs/: HIRS_SwidTags_usersguide_1.0.docx
HIRS_AttestationCA/: build.gradle
HIRS_AttestationCA/config/: genJavaProtoBuf.sh
HIRS_AttestationCAPortal/: build.gradle  build.gradle.save
HIRS_AttestationCAPortal/config/: genXjcLibrary.sh
HIRS_Provisioner/: TPMModule.properties  build.gradle  create-ek-cert.sh  hirs-provisioner-config.sh
HIRS_Provisioner.NET/: .editorconfig  README.md  hirs.sln
HIRS_Provisioner.NET/hirs/: appsettings.json  (+3 more)
HIRS_ProvisionerTPM2/: CMakeLists.txt  README.md  build.gradle
HIRS_ProvisionerTPM2/config/: doxygen.config  log4cplus_config.ini
HIRS_ProvisionerTPM2/docs/: dependencies-centos.md  developer-dependencies-centos.md  developer-dependencies-debian.md
HIRS_ProvisionerTPM2/include/: CommandTpm2.h  DeviceInfoCollector.h  HirsRuntimeException.h  Logger.h  Process.h  Properties.h  RestfulClientProvisioner.h  Tpm2ToolsUtils.h  Tss.h.in  Utils.h  Version.h.in
HIRS_ProvisionerTPM2/lib/: CPR.CMakeLists.txt.in  CppLint.CMakeLists.txt.in  GoogleTest.CMakeLists.txt.in
HIRS_ProvisionerTPM2/package/: package.tpm2.centos7.sh  package.tpm2.ubuntu.sh  package_release.sh  postinst  rpm-post-install.sh  set_tcg_properties.sh
HIRS_ProvisionerTPM2/scripts/: tpm2-provisioner-system-check.sh
HIRS_ProvisionerTPM2/src/: CMakeLists.txt  CommandTpm2.cpp  DeviceInfoCollector.cpp  HirsRuntimeException.cpp  Logger.cpp  Process.cpp  Properties.cpp  ProvisionerTpm2.proto  RestfulClientProvisioner.cpp  TPM2_Provisioner.cpp  Tpm2ToolsUtils.cpp  Utils.cpp  tpm_version.cpp
HIRS_ProvisionerTPM2/test/: CMakeLists.txt  Process_Test.cpp  Properties_Test.cpp  RestfulClientProvisioner_Test.cpp  Tpm2ToolsUtils_Test.cpp  Utils_Test.cpp
HIRS_ProvisionerTPM2/tpm2_vagrantBoxes/centos-7.4-tpm2tools-v1.1.0/: Vagrantfile
HIRS_ProvisionerTPM2/tpm2_vagrantBoxes/centos-7.4-tpm2tools-v2.1.0/: Vagrantfile
HIRS_Structs/: build.gradle
HIRS_UI/: build.gradle
HIRS_Utils/: build.gradle
TPM_Utils/: build.gradle
docker/: Dockerfile.ubuntu18
docs/: glossary.md  hirs-aca.md  hirs-provisioner.md  index.md
gradle/: versions.toml
integration-tests/: setup-aca.sh
overrides/: home.html
package/: build_version_helper.sh  package.centos.sh  package.rocky.sh  package.ubuntu.sh
scripts/: aca_image_setup.sh  download_validation_reports.sh  install_hat.ps1  remove_hat.ps1  start_hat.ps1
tpm_module/: build.gradle  libhis_activateidentity.hpp  libhis_bind.hpp  libhis_changekeyauth.hpp  libhis_changeownership.hpp  libhis_changesrksecret.hpp  libhis_clearkey.hpp  libhis_clearnvdata.hpp  libhis_clearownership.hpp  libhis_clearpcr.hpp  libhis_cli.hpp  libhis_collateidentityrequest.hpp  libhis_createek.hpp  libhis_createkey.hpp  libhis_errors.txt  libhis_exception.hpp  libhis_extendpcr.hpp  libhis_getkeyblob.hpp  libhis_getkeymodulus.hpp  libhis_getnvdata.hpp  libhis_getpcr.hpp  libhis_getpubkey.hpp  libhis_getrandombytes.hpp  libhis_quote.hpp  libhis_seal.hpp  libhis_setnvdata.hpp  libhis_sign.hpp  libhis_takeownership.hpp  libhis_unbind.hpp  libhis_unseal.hpp  libhis_utils.hpp  libhis_verifysignature.hpp  main.cpp  makefile  objects.mk  subdir.mk
(+2513 files in other folders)
